--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,3 +150,80 @@ h2 {
 	display: block;
 }
 
+.hello {
+	float: right;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-left: 5px;
+	border: 0;
+	background-color: #FFF;
+	cursor: pointer;
+/*  outline: 0;*/
+}
+label.hello:hover {
+	color: lightblue;
+}
+
+form:last-child {
+	margin-top: 8px;
+	margin-right: 25px
+}
+
+
+.fileUpload {
+	position: relative;
+	overflow: hidden;
+	margin-right: 0px;
+	margin-bottom: 5px;
+	background: #34bae3;
+	border: none;
+	font-size: 14px;
+	font-family: Helvetica, Arial, sans-serif;
+	color: #FFF;
+}
+.fileUpload input.upload {
+	color: #fff;
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	margin-bottom: 10px;
+	padding: 0;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+.fileUpload:hover {
+	background: #3885e3;
+}
+
+/*it would be cool to have things fade in
+it would also be cool to add in drag and drop
+*/
+
+
+/*.alizarin-flat-button {
+  position: relative;
+  vertical-align: top;
+  width: 100%;
+  height: 60px;
+  padding: 0;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #e74c3c;
+  border: 0;
+  border-bottom: 2px solid #db4334;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #db4334;
+  box-shadow: inset 0 -2px #db4334;
+}
+.alizarin-flat-button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}*/
+
+
