--- a/views/index.html
+++ b/views/index.html
@@ -15,9 +15,9 @@
       <!-- Form Starts   -->
       <form role="form" action="/upload" method="POST" enctype="multipart/form-data">
         <!-- File Upload -->
-        <div class="form-group">
-          <label for="exampleInputFile">Upload File</label>
-          <input type="file" name="file_name" id="fileName">
+        <div class="form-group fileUpload btn btn-primary">
+          <label for="exampleInputFile">Choose File</label>
+          <input type="file" name="file_name" id="fileName" class="upload" webkitdirectory>
         </div>
 
         <div class="form-group">
