--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,15 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div>
+      <form>
+<label class="hello" for="logout">Log-Out</label>
+    <button type="submit" formaction="/logout" class="glyphicon glyphicon-log-out hello" id="logout"></button>
+<label class="hello" for="login">Log-In</label>
+    <button type="submit" formaction="/login_page" class="glyphicon glyphicon-log-in hello" id="login"></button>
+    </form>
+    </div>
+    <br>
     <br>
     <div class="container">
       <div class="row text-center">
@@ -18,7 +27,5 @@
       <br>
   {% block content %}{% endblock %}
     </div>
-  {% block scripts %}{% endblock %}
-
   </body>
 </html>
