--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,21 +1,62 @@
 <div ng-include="'partials/navbar'"></div>
 
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
+<h1>Upload your file</h1>
+<h2>Deletes forever when the time runs out</h2>
+
+<div id="bg" class="well col-md-6 col-md-offset-3">
+  <!-- Form Starts   -->
+  <form role="form" action="/upload" method="POST" enctype="multipart/form-data">
+  <!-- File Upload -->
+  <div class="form-group fileUpload btn btn-primary">
+    <label for="exampleInputFile">Choose File</label>
+    <input type="file" name="file_name" id="fileName" class="upload" webkitdirectory>
+    </div>
+
+    <div class="form-group">
+    <label for="duration">How long do you want the document to be up before it gets deleted?</label>
+    <!-- Input Duration -->
+    <!-- Hours -->
+      <div class="input-group input-group-lg">
+        <span class="input-group-addon">Hours</span>
+        <input type="text" class="form-control">
+      </div>
+      <br>
+    <!-- Minutes -->
+      <div class="input-group input-group-lg">
+        <span class="input-group-addon">Minutes</span>
+        <input type="text" class="form-control">
+      </div>
+      <br>
+    <!-- Seconds -->
+      <div class="input-group input-group-lg">
+        <span class="input-group-addon">Seconds</span>
+        <input type="text" class="form-control">
+      </div>
+
+     <!--  <div class="input-group col-md-3">
+        <input type="text" class="form-control" name="hours">
+        <span class="input-group-addon">hours</span>
+      </div>
+      <div class="input-group col-md-3">
+        <input type="text" class="form-control" name="minutes">
+        <span class="input-group-addon">minutes</span>
+      </div>
+      <div class="input-group col-md-3">
+        <input type="text" class="form-control" name="seconds">
+        <span class="input-group-addon">seconds</span>
+      </div> -->
+
+    </div>
+
+    <!-- Uploader Email-->
+    <div class="form-group">
+    <input id="email-input" type="email" class="form-control" name="uploader_email" id="uploaderEmail" placeholder= "Your email">
+    <br>
+    <!-- Recipient Email -->
+    <input id="recipient-input" type="text" class="form-control" name="reader_email" id="readerEmail" placeholder= "Recipient Email">
+    </div>
+
+    <button class="submit-button" type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 
-<div class="row marketing">
-  <div ng-repeat="thing in awesomeThings">
-      <h4>{{thing.name}}</h4>
-      <p>{{thing.info}}</p>
-  </div>
-</div>
-
-<div class="footer">
-  <p>♥ from the Yeoman team</p>
-</div>
