--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,13 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <style>
+            .my-drop-zone { border: dotted 3px lightgray; }
+            .ng-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
+            .another-file-over-class { border: dotted 3px green; }
+
+            html, body { height: 100%; }
+        </style>
   </head>
   <body ng-app="ghostdropApp">
     <!--[if lt IE 7]>
@@ -54,6 +61,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -61,6 +69,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
+        <script src="scripts/controllers/dropdown.js"></script>
+        <script src="scripts/services/dropdown.js"></script>
         <!-- endbuild -->
+
 </body>
 </html>
